--- a/app/src/main/res/layout/activity_scanqr.xml
+++ b/app/src/main/res/layout/activity_scanqr.xml
@@ -43,6 +43,7 @@
 
     <Button
         android:text="Back"
+<!--         Error -->
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/back"
